Fix z-index of dropdown

--- a/src/components/FoodDropdown.css
+++ b/src/components/FoodDropdown.css
@@ -2,4 +2,5 @@
   position: absolute;
   margin: 0;
   width: 30em;
+  z-index: 1000;
 }
